--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "keywords": [
     "json",
     "data",
-    "storage"
+    "storage",
+    "node.js"
   ],
   "author": "Jaakko",
   "license": "MIT",
