--- a/package.json
+++ b/package.json
@@ -3,6 +3,20 @@
   "version": "1.0.0",
   "description": "Store data easily to json files.",
   "main": "index.js",
+  "dependencies": {
+    "async": "^1.4.2",
+    "graceful-fs": "^4.1.2",
+    "mkdirp": "^0.5.1",
+    "node-uuid": "^1.4.4"
+  },
+  "devDependencies": {
+    "temp": "^0.8.3",
+    "mocha": "^2.3.3",
+    "chai": "^3.3.0"
+  },
+  "engines": {
+    "node": ">=0.4.12"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
