--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "async": "^1.4.2",
     "graceful-fs": "^4.1.2",
     "mkdirp": "^0.5.1",
-    "node-uuid": "^1.4.4"
+    "node-uuid": "^1.4.4",
+    "simple-encryptor": "^4.0.0"
   },
   "devDependencies": {
     "temp": "^0.8.3",
