--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
     "async": "^1.4.2",
     "graceful-fs": "^4.1.2",
     "mkdirp": "^0.5.1",
-    "node-uuid": "^1.4.4",
-    "simple-encryptor": "^4.0.0"
+    "simple-encryptor": "^4.0.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "temp": "^0.8.3",
+    "chai": "^3.3.0",
     "mocha": "^2.3.3",
-    "chai": "^3.3.0"
+    "temp": "^0.8.3"
   },
   "engines": {
     "node": ">=0.4.12"
